@@ -1,6 +1,7 @@
 package cloud.dagbok.backend.config;
 
 import cloud.dagbok.backend.filter.JwtAuthenticationFilter;
+import cloud.dagbok.backend.filter.RateLimitFilter;
 import java.util.Arrays;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
@@ -21,18 +22,21 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 public class WebSecurityConfig implements WebMvcConfigurer {
 
   private final JwtAuthenticationFilter apiKeyFilter;
+  private final RateLimitFilter rateLimitFilter;
 
   @Value("${cors.allowed-origins}")
   private String allowedOrigins;
 
-  public WebSecurityConfig(JwtAuthenticationFilter apiKeyFilter) {
+  public WebSecurityConfig(JwtAuthenticationFilter apiKeyFilter, RateLimitFilter rateLimitFilter) {
     this.apiKeyFilter = apiKeyFilter;
+    this.rateLimitFilter = rateLimitFilter;
   }
 
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
     http.cors(cors -> cors.configurationSource(corsConfigurationSource()))
         .csrf(AbstractHttpConfigurer::disable)
+        .addFilterBefore(rateLimitFilter, UsernamePasswordAuthenticationFilter.class)
         .addFilterBefore(apiKeyFilter, UsernamePasswordAuthenticationFilter.class)
         .authorizeHttpRequests(
             auth ->
@@ -40,14 +44,14 @@ public class WebSecurityConfig implements WebMvcConfigurer {
                         "/user/login",
                         "/user/register",
                         "/user/demo",
-                        "/user/logout",
                         "/actuator/health",
                         "/api/health",
                         "/api/status",
                         "/api/public/**",
                         "/error")
                     .permitAll()
-                    .requestMatchers("/api/**", "/user/me", "/user/prompt", "/user/model")
+                    .requestMatchers(
+                        "/api/**", "/user/me", "/user/prompt", "/user/model", "/user/logout")
                     .authenticated()
                     .anyRequest()
                     .denyAll());
@@ -60,12 +64,19 @@ public class WebSecurityConfig implements WebMvcConfigurer {
 
     if (allowedOrigins != null && !allowedOrigins.isBlank()) {
       List<String> origins = Arrays.stream(allowedOrigins.split(",")).map(String::trim).toList();
+
+      if (origins.contains("*")) {
+        throw new IllegalArgumentException(
+            "Wildcard origins (*) not allowed with credentials enabled");
+      }
+
       configuration.setAllowedOrigins(origins);
     }
 
     configuration.setAllowedMethods(
         Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setAllowedHeaders(
+        Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
     configuration.setAllowCredentials(true);
     configuration.setMaxAge(3600L);
 
